--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div id="carouselTPV" class="carouselTPV carousel slide align-items-center h-100 m-auto">
-              <div class="carousel-inner">
+              <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/tpv/1.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/tpv/2.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/tpv/3.png" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselTPV" data-bs-slide="prev">
@@ -312,15 +312,18 @@
 
           <div class="col-12 col-md-6">
             <div id="carouselRFID" class="carouselRFID carousel slide align-items-center h-100 m-auto">
-              <div class="carousel-inner">
+              <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/mifare/1.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/mifare/2.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/mifare/3.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/projects/mifare/4.png" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselRFID" data-bs-slide="prev">
@@ -345,15 +348,24 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div id="carouselPortfolio" class="carouselPortfolio carousel slide align-items-center h-100 m-auto">
-              <div class="carousel-inner">
+              <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/portfolio/1.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/portfolio/2.png" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/about/hire-element.svg" class="d-block w-100">
+                  <img src="images/projects/portfolio/3.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/projects/portfolio/4.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/projects/portfolio/5.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/projects/portfolio/6.png" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselPortfolio"
